--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "classnames": "^2.2.6",
-        "react": "^16.7.0",
-        "react-dom": "^16.7.0",
-        "react-scripts": "2.1.1"
+        "classnames": "~2.2.6",
+        "react": "~16.7.0",
+        "react-dom": "~16.7.0",
+        "react-scripts": "~2.1.1"
     },
     "scripts": {
         "start": "react-scripts start",
